// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/shareBoard/shareBoard return shareBoard and click Copy link 1`] = `<div />`;

exports[`src/components/shareBoard/shareBoard return shareBoard and click Copy link 2`] = `<div />`;

exports[`src/components/shareBoard/shareBoard return shareBoard and click Regenerate token 1`] = `<div />`;

exports[`src/components/shareBoard/shareBoard return shareBoard and click Select 1`] = `<div />`;

exports[`src/components/shareBoard/shareBoard return shareBoard and click Select 2`] = `<div />`;

exports[`src/components/shareBoard/shareBoard return shareBoard and click Select, non-plugin mode 1`] = `<div />`;

exports[`src/components/shareBoard/shareBoard return shareBoard and click Select, non-plugin mode 2`] = `<div />`;

exports[`src/components/shareBoard/shareBoard return shareBoard template and click Select 1`] = `<div />`;

exports[`src/components/shareBoard/shareBoard return shareBoard template and click Select 2`] = `<div />`;

exports[`src/components/shareBoard/shareBoard return shareBoard, and click switch 1`] = `
<body>
  <div />
  <div>
    <div
      class="Dialog dialog-back AppModal ShareBoardDialog size--small"
      style="--app-modal-width: 960px;"
    >
      <div
        class="backdrop"
      />
      <div
        class="wrapper"
      >
        <div
          class="dialog"
          role="dialog"
        >
          <div
            class="toolbar"
          >
            <div>
              <h1
                class="dialog-title"
              >
                <span
                  class="AppModal__title"
                >
                  <span
                    class="AppModal__titleIcon"
                  >
                    <i
                      class="CompassIcon icon-share-variant-outline"
                    />
                  </span>
                  Share Board
                </span>
              </h1>
            </div>
            <div
              class="toolbar--right"
            />
          </div>
          <div
            class="AppModal__content"
          >
            <div
              class="AppModal__body ShareBoardDialog__body"
            >
              <div
                class="share-input__container"
              >
                <div
                  class="share-input"
                >
                  <i
                    class="CompassIcon icon-magnify MagnifyIcon"
                  />
                  <div
                    class="userSearchInput css-b62m3t-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-6-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                      role="log"
                    />
                    <div
                      class=" css-1wmrr75-Control"
                    >
                      <div
                        class=" css-b2z5qd-ValueContainer"
                      >
                        <div
                          class=" css-1jqq78o-placeholder"
                          id="react-select-6-placeholder"
                        >
                          Search for people and channels
                        </div>
                        <div
                          class=" css-1p5v8kp-Input"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-describedby="react-select-6-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=""
                            id="react-select-6-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" css-1hb7zxy-IndicatorsContainer"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="user-items"
              >
                <div
                  class="user-item"
                >
                  <div
                    class="user-item__content"
                  >
                    <div
                      class="ml-3"
                    >
                      <strong>
                        Everyone at Test Team Team
                      </strong>
                    </div>
                  </div>
                  <div>
                    <div
                      aria-label="menuwrapper"
                      class="MenuWrapper"
                      role="button"
                    >
                      <button
                        class="user-item__button"
                      >
                        None
                        <i
                          class="CompassIcon icon-chevron-down CompassIcon"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="tabs-container"
              >
                <button
                  class="tab-item false"
                >
                  Share
                </button>
                <button
                  class="tab-item tab-item--active"
                >
                  Publish
                </button>
              </div>
              <div
                class="tabs-content"
              >
                <div>
                  <div
                    class="d-flex justify-content-between"
                  >
                    <div
                      class="d-flex flex-column"
                    >
                      <div
                        class="text-heading2"
                      >
                        Publish to the web
                      </div>
                      <div
                        class="text-light"
                      >
                        Publish and share a read-only link with everyone on the web.
                      </div>
                    </div>
                    <div>
                      <div
                        class="Switch override-main size--medium on"
                      >
                        <div
                          class="octo-switch-inner"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="d-flex justify-content-between tabs-inputs"
                >
                  <div
                    class="d-flex input-container"
                  >
                    <a
                      class="shareUrl"
                      href="http://localhost/shared/1/1?r=oneToken"
                      rel="noreferrer"
                      target="_blank"
                    >
                      http://localhost/shared/1/1?r=oneToken
                    </a>
                    <div
                      class="octo-tooltip tooltip-top"
                      data-tooltip="Regenerate token"
                    >
                      <button
                        aria-label="Regenerate token"
                        title="Regenerate token"
                        type="button"
                      >
                        <i
                          class="CompassIcon icon-refresh"
                        />
                      </button>
                    </div>
                  </div>
                  <button
                    title="Copy public link"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-content-copy CompassIcon"
                    />
                    <span>
                      Copy link
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="AppModal__footer"
            >
              <button
                class="AppModal__cancel AppModal__cancel--close"
                type="button"
              >
                <span
                  class="AppModal__cancelIcon"
                >
                  <svg
                    class="tabler-icon tabler-icon-x "
                    fill="none"
                    height="16"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 6l-12 12"
                    />
                    <path
                      d="M6 6l12 12"
                    />
                  </svg>
                </span>
                Close
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`src/components/shareBoard/shareBoard return shareBoardComponent and click Switch without sharing 1`] = `
<body>
  <div />
  <div>
    <div
      class="Dialog dialog-back AppModal ShareBoardDialog size--small"
      style="--app-modal-width: 960px;"
    >
      <div
        class="backdrop"
      />
      <div
        class="wrapper"
      >
        <div
          class="dialog"
          role="dialog"
        >
          <div
            class="toolbar"
          >
            <div>
              <h1
                class="dialog-title"
              >
                <span
                  class="AppModal__title"
                >
                  <span
                    class="AppModal__titleIcon"
                  >
                    <i
                      class="CompassIcon icon-share-variant-outline"
                    />
                  </span>
                  Share Board
                </span>
              </h1>
            </div>
            <div
              class="toolbar--right"
            />
          </div>
          <div
            class="AppModal__content"
          >
            <div
              class="AppModal__body ShareBoardDialog__body"
            >
              <div
                class="share-input__container"
              >
                <div
                  class="share-input"
                >
                  <i
                    class="CompassIcon icon-magnify MagnifyIcon"
                  />
                  <div
                    class="userSearchInput css-b62m3t-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-7-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                      role="log"
                    />
                    <div
                      class=" css-1wmrr75-Control"
                    >
                      <div
                        class=" css-b2z5qd-ValueContainer"
                      >
                        <div
                          class=" css-1jqq78o-placeholder"
                          id="react-select-7-placeholder"
                        >
                          Search for people and channels
                        </div>
                        <div
                          class=" css-1p5v8kp-Input"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-describedby="react-select-7-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=""
                            id="react-select-7-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" css-1hb7zxy-IndicatorsContainer"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="user-items"
              >
                <div
                  class="user-item"
                >
                  <div
                    class="user-item__content"
                  >
                    <div
                      class="ml-3"
                    >
                      <strong>
                        Everyone at Test Team Team
                      </strong>
                    </div>
                  </div>
                  <div>
                    <div
                      aria-label="menuwrapper"
                      class="MenuWrapper"
                      role="button"
                    >
                      <button
                        class="user-item__button"
                      >
                        None
                        <i
                          class="CompassIcon icon-chevron-down CompassIcon"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="tabs-container"
              >
                <button
                  class="tab-item false"
                >
                  Share
                </button>
                <button
                  class="tab-item tab-item--active"
                >
                  Publish
                </button>
              </div>
              <div
                class="tabs-content"
              >
                <div>
                  <div
                    class="d-flex justify-content-between"
                  >
                    <div
                      class="d-flex flex-column"
                    >
                      <div
                        class="text-heading2"
                      >
                        Publish to the web
                      </div>
                      <div
                        class="text-light"
                      >
                        Publish and share a read-only link with everyone on the web.
                      </div>
                    </div>
                    <div>
                      <div
                        class="Switch override-main size--medium"
                      >
                        <div
                          class="octo-switch-inner"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="AppModal__footer"
            >
              <button
                class="AppModal__cancel AppModal__cancel--close"
                type="button"
              >
                <span
                  class="AppModal__cancelIcon"
                >
                  <svg
                    class="tabler-icon tabler-icon-x "
                    fill="none"
                    height="16"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 6l-12 12"
                    />
                    <path
                      d="M6 6l12 12"
                    />
                  </svg>
                </span>
                Close
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`src/components/shareBoard/shareBoard should match snapshot 1`] = `<div />`;

exports[`src/components/shareBoard/shareBoard should match snapshot with sharing 1`] = `<div />`;

exports[`src/components/shareBoard/shareBoard should match snapshot with sharing and subpath 1`] = `<div />`;

exports[`src/components/shareBoard/shareBoard should match snapshot with sharing and without workspaceId and subpath 1`] = `<div />`;

exports[`src/components/shareBoard/shareBoard should match snapshot, with template 1`] = `<div />`;
